# critiquely

./: Dockerfile  Dockerfile.cli  Dockerfile.mcp-proxy  LICENSE  README.md  docker-compose.yml  index.yaml  pyproject.toml  test.txt
.github/workflows/: build-processor.yaml  build-receiver.yaml  build.yaml  ci.yml  pulumi_pr.yaml  pulumi_push.yaml  release-chart.yml
app/: main.py  pyproject.toml
app/src/: config.py  main.py
app/src/core/: nodes.py  review.py  state.py
app/src/queue/: __init__.py  consumer.py
app/src/tools/: git.py  mcp.py
app/src/utils/: git.py  mermaid.py  publisher.py
chart/: .gitignore  Chart.yaml  README.md
chart/templates/: _helpers.tpl  ingress.yaml  processor-deployment.yaml  rbac.yaml  service.yaml
charts/critiquely/: Chart.yaml  README.md.gotmpl  values.yaml
charts/templates/: receiver-deployment.yaml
cli/: pyproject.toml
cli/critiquely/: critiquely.py  human_in_the_loop.py
cli/critiquely/core/: agent.py  git_utils.py  mcp_client.py  review.py
cli/src/: config.py  main.py
cli/src/core/: graph.py  langchain_lorne.py  langchain_testing.py  nodes.py  review.py  state.py  test.py
cli/src/nodes/: plan.py
cli/src/tools/: git.py  human_in_the_loop.py  mcp.py
cli/src/utils/: fs.py  fs_utils.py  git.py  routers.py  state.py
cli/tools/: human_in_the_loop.py
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  ecr.py  iam.py  lambda.py  lambda_stack.py  pyproject.toml  requirements.txt
infrastructure/src/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  ecr.py  iam.py  processor_ecr.py  receiver_ecr.py
processor/: Dockerfile  Dockerfile copy  pyproject.toml
processor/src/: config.py  interactive.py  logging.py  main.py
processor/src/core/: graph.py  graph_new.py  logging_config.py  new_graph.py  new_nodes.py  nodes.py  review.py  state.py
processor/src/entrypoints/: cli.py  queue.py
processor/src/graph/: graph.py
processor/src/graphs/: graph.py
processor/src/nodes/: __init__.py  git.py  git_nodes.py
processor/src/queue/: __init__.py  consumer.py  rabbitmq.py
processor/src/state/: state.py
processor/src/tools/: mcp.py
processor/src/utils/: fs.py  git.py  github.py  publisher.py  state.py
processor/src/workflows/: __init__.py  base.py  registry.py
processor/src/workflows/review/: __init__.py  graph.py  nodes.py  routers.py  state.py  workflow.py
receiver/: Dockerfile  pyproject.toml
receiver/src/: main.py
receiver/src/routing/: __init__.py  rules.py
sample_webhooks/: pr.json
tests/: test_main.py
