[project]
name = "critiquebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.7",
    "mangum>=0.19.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.12",
]
