[project]
name = "critiquely"
version = "1.0.0"
description = "Critiquely CLI"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.7",
    "pygithub>=2.6.1",
]

[project.scripts]
critiquely = "critiquely:critiquely.cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"