[project]
name = "receiver"
version = "0.1.0"
description = "Receiever for GitHub Webhooks"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "unidiff",
    "pika>=1.3.2",
    "pydantic-settings",
    "httpx",
]

[dependency-groups]
dev = [
    # In development mode, include the FastAPI development server.
    "fastapi[standard]",
    "pylint>=3.3.7",
    "black>=25.1.0",
]

[tool.flit.module]
name = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
